# TspOptimization

./: CMakeLists.txt  README.md
headers/: CostFunction.h  DataSet.h  GeneticAlgorithm.h  RandomSearch.h
source/: CostFunction.cpp  DataSet.cpp  GeneticAlgorithm.cpp  RandomSearch.cpp  main.cpp
test/inputs/: test20.txt  testExam.txt
test/outputs/: copy.txt  out20.txt  out237.txt  out237With3Runs.txt  out50.txt  outExam.txt
